--- a/account/templates/account/top.html
+++ b/account/templates/account/top.html
@@ -6,8 +6,8 @@
 <!-- コンテンツ -->
 {% block content %}
 
-<div class="top-line-height">
-<div class="container" style="background-color: #f0f8ff">
+<div class="top-page-setting">
+<div class="container">
   <h3>アイディア発想支援サイトとは</h3><hr>
   <p>
     グループディスカッションにおける、アイディア発想や意思決定を支援します。
@@ -17,7 +17,7 @@
     </span></br>
     グループで使用する場合は、書き込みを行う人は書記の役割を担っている人のみにしてください。(訂正あり)</br>
     (ログインしたユーザーに情報が紐づけられているので他のユーザー名でログインを行うと情報が見れません。)</br></br>
-    <span style="color: blue; font-weight: bold">(1/16 追記、同じユーザー名で複数ログイン、書き込み等の操作も自由に行えそう。</span></br>
+    <span style="color: blue; font-weight: bold">(1/16 追記、同じユーザー名で複数端末ログイン、書き込み等の操作も自由に行えそうです。</span></br>
     表内の同じ要素を同時に扱うとエラー発生等あるかもしれませんのでエラー画面が出たらブラウザバックしてください。)</br>
     それ以外でエラーが起きる場合は人為的ミスです。報告お願いします。
   </p>
