--- a/refine/templates/refine/home.html
+++ b/refine/templates/refine/home.html
@@ -6,7 +6,7 @@
 <p>
     <span id="page-title">統括的分析　</span>
     <a
-    class="btn btn-secondary"
+    class="btn btn-secondary btn-sm"
     href="{% url 'account:top' %}#jump_refine"
     role="button"
     >ヘルプ</a
