--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -8,8 +8,8 @@
   <div class="col-md-6 offset-md-3">
     <div class="card mt-3 mb-3 bg-light">
       <!-- カードヘッダー -->
-      <div class="card-header bg-primary text-light">
-        <h4>Log in</h4>
+      <div class="card-header bg-secondary text-light">
+        <h4>ログイン</h4>
       </div>
       <!-- カードボディー -->
       <div class="card-body">
