--- a/account/templates/account/logout_done.html
+++ b/account/templates/account/logout_done.html
@@ -6,7 +6,7 @@
   <div class="col-md-6 offset-md-3">
     <div class="card mt-3 mb-3 bg-light">
       <!-- カードヘッダー -->
-      <div class="card-header bg-primary text-light">
+      <div class="card-header bg-secondary text-light">
         <h4>Log out</h4>
       </div>
       <!-- カードボディー -->
