--- a/account/templates/account/user_form.html
+++ b/account/templates/account/user_form.html
@@ -8,7 +8,7 @@
     <div class="card mt-3 mb-3 bg-light">
       <!-- カードヘッダー -->
       <div class="card-header bg-success text-light">
-        <h4>{{ process_name }}</h4>
+        <h4>会員登録</h4>
       </div>
       <!-- カードボディー -->
       <div class="card-body">
@@ -27,8 +27,8 @@
           >
             キャンセル
           </button>
-          <button type="submit" class="btn btn-success btn-lg btn-block mt-2">
-            {{ process_name }}
+          <button type="submit" class="btn btn-success btn-lg btn-block mt-4">
+            登録
           </button>
         </form>
       </div>
