--- a/idea/templates/idea/idea_list.html
+++ b/idea/templates/idea/idea_list.html
@@ -6,7 +6,7 @@
   <span id="page-title">アイディア一覧</span>
   　アイディアを入力していきましょう　
   <a
-    class="btn btn-secondary"
+    class="btn btn-secondary btn-sm"
     href="{% url 'account:top' %}#jump_idea"
     role="button"
     >ヘルプ</a
@@ -28,7 +28,7 @@
         <th></th>
         <th>
           <a
-            class="btn btn-primary"
+            class="btn btn-primary btn-sm"
             href="{% url 'idea:create' %}"
             role="button"
             >新規作成
@@ -45,7 +45,7 @@
         <td>{{ a.create_user}}</td>
         <td>
           <a
-            class="btn btn-outline-primary"
+            class="btn btn-outline-primary btn-sm"
             href="{% url 'idea:detail' a.pk %}"
             role="button"
             >詳細</a
@@ -53,7 +53,7 @@
         </td>
         <td>
           <a
-            class="btn btn-outline-primary"
+            class="btn btn-outline-primary btn-sm"
             href="{% url 'idea:update' a.pk %}"
             role="button"
             >編集</a
@@ -61,7 +61,7 @@
         </td>
         <td>
           <a
-            class="btn btn-danger"
+            class="btn btn-danger btn-sm"
             href="{% url 'idea:delete' a.pk %}"
             role="button"
             >削除</a
