--- a/idea/templates/idea/v_list.html
+++ b/idea/templates/idea/v_list.html
@@ -5,7 +5,7 @@
   <span id="page-title">アイディア投票</span
   >　　　メンバーはそれぞれ、発想されたアイディアに対し、bestを１つ、betterを一つか二つ選び、投票を押して記録しましょう
   <a 
-  class="btn btn-secondary"
+  class="btn btn-secondary btn-sm"
   href="{% url 'account:top'%}#jump_vote"
   role="button"
   >ヘルプ</a>
@@ -35,7 +35,7 @@
         <td>{% multiply a.best_choice a.better_choice %}</td>
         <td>{{ a.create_user}}</td>
         <td><a 
-          class="btn btn-primary"
+          class="btn btn-primary btn-sm"
           href="{% url 'idea:vote_update' a.pk %}">投票</a></td>
 
         
