--- a/reflect/templates/reflect/list.html
+++ b/reflect/templates/reflect/list.html
@@ -7,7 +7,7 @@
   <span id="page-title">アイディアの振り返り</span>
   　どうして納得いかなかったのか論点を定めましょう(上)　その論点について、話し合いを行い(真ん中)、最後に問題点としてまとめましょう(下)　
   <a
-  class="btn btn-secondary"
+  class="btn btn-secondary btn-sm"
   href="{% url 'account:top' %}#jump_reflect"
   role="button"
   >ヘルプ</a
@@ -26,7 +26,7 @@
         <th></th>
         <th>
           <a
-            class="btn btn-primary"
+            class="btn btn-primary btn-sm"
             href="{% url 'reflect:create' %}"
             role="button"
             >論点の新規作成</a
@@ -41,7 +41,7 @@
         <td>{{ reflect.create_user }}</td>
         <td>
           <a
-            class="btn btn-outline-primary"
+            class="btn btn-outline-primary btn-sm"
             href="{% url 'reflect:update' reflect.pk %}"
             role="button"
             >編集</a
@@ -49,7 +49,7 @@
         </td>
         <td>
           <a
-            class="btn btn-danger"
+            class="btn btn-danger btn-sm"
             href="{% url 'reflect:delete' reflect.pk %}"
             role="button"
             >削除</a
@@ -76,7 +76,7 @@
         <th></th>
         <th>
           <a
-            class="btn btn-primary"
+            class="btn btn-primary btn-sm"
             href="{% url 'reflect:c_create' %}"
             role="button"
             >コメントの新規作成</a
@@ -101,7 +101,7 @@
         <td>{{ reflect.create_user }}</td>
         <td>
           <a
-            class="btn btn-outline-primary"
+            class="btn btn-outline-primary btn-sm"
             href="{% url 'reflect:c_update' reflect.pk %}"
             role="button"
             >コメント内容の編集</a
@@ -109,7 +109,7 @@
         </td>
         <td>
           <a
-            class="btn btn-danger"
+            class="btn btn-danger btn-sm"
             href="{% url 'reflect:c_delete' reflect.pk %}"
             role="button"
             >削除</a
@@ -134,7 +134,7 @@
         <th></th>
         <th>
           <a
-            class="btn btn-primary"
+            class="btn btn-primary btn-sm"
             href="{% url 'reflect:p_create' %}"
             role="button"
             >問題点の新規投稿</a
@@ -149,7 +149,7 @@
         <td>{{ reflect.create_user }}</td>
         <td>
           <a
-            class="btn btn-outline-primary"
+            class="btn btn-outline-primary btn-sm"
             href="{% url 'reflect:p_update' reflect.pk %}"
             role="button"
             >編集</a
@@ -157,7 +157,7 @@
         </td>
         <td>
           <a
-            class="btn btn-danger"
+            class="btn btn-danger btn-sm"
             href="{% url 'reflect:p_delete' reflect.pk %}"
             role="button"
             >削除</a
