--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,5 +1,5 @@
 {% extends 'account/base.html' %}{% block title %}
-<title>ログイン-アイディア発想支援</title> {% endblock title %}
+<title>ログイン-合意形成支援</title> {% endblock title %}
 <!--ページ見出し-->
 
 <!-- コンテンツ -->
