--- a/account/templates/account/top.html
+++ b/account/templates/account/top.html
@@ -8,7 +8,7 @@
 
 <div class="top-page-setting">
 <div class="container">
-  <h3>アイディア発想支援サイトとは</h3><hr>
+  <h3>合意形成支援サイトとは</h3><hr>
   <p>
     グループディスカッションにおける、アイディア発想や意思決定を支援します。
     下記に示すステップに従い、議論を行ってみてください。</br>
@@ -22,7 +22,7 @@
     それ以外でエラーが起きる場合は人為的ミスです。報告お願いします。
   </p>
 
-  <h3>アイディア発想支援サイト使用の流れ</h3><hr>
+  <h3>合意形成支援サイト使用の流れ</h3><hr>
   <h5>ステップ0 ログイン</h5>
   <p>
     前述したとおり、入力内容はユーザー情報に紐づけられるのでこのサイトの利用には会員登録及びログインが必要です。</br>
@@ -91,7 +91,7 @@
     論点に対していくつかポジティブ、ネガティブな点を話し合い、話し合った結果どうなったのかをコメントの種類「結果」を選び入力します。</br>
     最後に質疑応答で指摘された場合どのように対応するか話し合い、内容をコメントの種類「対応」を選び入力しましょう。</br>
     この作業をすることで、アイディアのプレゼンテーションをするときに様々な質問に対して回答する準備ができます。</br>
-    これが終わればアイディア発想は完了です!!! お疲れさまでした!
+    これが終われば合意形成は完了です!!! お疲れさまでした!
   </p>
   <h5 id="jump_reflect">ステップ6-B-1 アイディアの振り返り</h5>
   <p>
