--- a/account/templates/account/user_form.html
+++ b/account/templates/account/user_form.html
@@ -1,5 +1,5 @@
 {% extends "account/base.html" %}{% block title %}
-<title>会員登録-アイディア発想支援</title> {% endblock title %}
+<title>会員登録-合意形成支援</title> {% endblock title %}
 
 <!-- コンテンツ -->
 {% block content %}
