--- a/idea/templates/idea/idea_confirm_delete.html
+++ b/idea/templates/idea/idea_confirm_delete.html
@@ -1,5 +1,5 @@
 {% extends 'account/base.html' %}{% block title %}
-<title>アイディア削除-アイディア発想支援</title> {% endblock title %}
+<title>アイディア削除-合意形成支援</title> {% endblock title %}
 <!---->
 {% block header %}
 <span id="page-title">アイディアの削除</span>
