--- a/idea/templates/idea/idea_detail.html
+++ b/idea/templates/idea/idea_detail.html
@@ -1,5 +1,5 @@
 {% extends 'account/base.html' %}{% block title %}
-<title>アイディア詳細-アイディア発想支援</title> {% endblock title %}
+<title>アイディア詳細-合意形成支援</title> {% endblock title %}
 <!--ページ見出し-->
 {% block header %}
 <span id="page-title">アイディア詳細</span>
