--- a/idea/templates/idea/idea_form.html
+++ b/idea/templates/idea/idea_form.html
@@ -1,5 +1,5 @@
 {% extends 'account/base.html' %}{% block title %}
-<title>アイディアの投稿/編集-アイディア発想支援</title> {% endblock title %}
+<title>アイディアの投稿/編集-合意形成支援</title> {% endblock title %}
 <!--改行防ぎ-->
 {%block header %}
 <span id="page-title">アイディアの投稿/編集</span>
