--- a/idea/templates/idea/v_form.html
+++ b/idea/templates/idea/v_form.html
@@ -1,5 +1,5 @@
 {% extends 'account/base.html' %}{% block title %}
-<title>投票内容の編集-アイディア発想支援</title> {% endblock title %}
+<title>投票内容の編集-合意形成支援</title> {% endblock title %}
 <!--ページ見出し-->
 {% block header %}
 <span id="page-title">投票内容の編集</span>
