--- a/idea/templates/idea/v_list.html
+++ b/idea/templates/idea/v_list.html
@@ -1,5 +1,5 @@
 {% extends 'account/base.html' %}{% block title %}
-<title>投票-アイディア発想支援</title> {% endblock title %}
+<title>投票-合意形成支援</title> {% endblock title %}
 <!--ページ見出し--> {% block header %}
 <p>
   <span id="page-title">アイディア投票</span
