--- a/matrix/templates/matrix/list.html
+++ b/matrix/templates/matrix/list.html
@@ -1,5 +1,5 @@
 {% extends 'account/base.html' %}{% block title %}<title>
-  評価マトリクス-アイディア発想支援
+  評価マトリクス-合意形成支援
 </title>
 {% endblock title %}
 <!--ヘッダー-->
