--- a/refine/templates/refine/form.html
+++ b/refine/templates/refine/form.html
@@ -1,5 +1,5 @@
 {% extends 'account/base.html' %}{% block title %}<title>
-  アイディアの精緻化投稿-アイディア発想支援
+  アイディアの精緻化投稿-合意形成支援
 </title>
 {% endblock title %}
 <!--ヘッダー-->
