--- a/refine/templates/refine/home.html
+++ b/refine/templates/refine/home.html
@@ -1,5 +1,5 @@
 {% extends 'account/base.html' %}{% block title %}<title>
-    統括的分析-アイディア発想支援
+    統括的分析-合意形成支援
   </title>
   {% endblock title %}
   <!--ヘッダー--> {% block header %}
