--- a/refine/templates/refine/update.html
+++ b/refine/templates/refine/update.html
@@ -1,5 +1,5 @@
 {% extends 'account/base.html' %}{% block title %}<title>
-  Iディの精緻化編集-アイディア発想支援
+  Iディの精緻化編集-合意形成支援
 </title>
 {% endblock title %}
 <!--ヘッダー-->
