--- a/retry/templates/retry/form.html
+++ b/retry/templates/retry/form.html
@@ -1,5 +1,5 @@
 {% extends 'account/base.html' %} {% block title %}<title>
-  再試行の設計投稿/編集-アイディア発想支援
+  再試行の設計投稿/編集-合意形成支援
 </title>
 {% endblock title %}
 <!--ヘッダー-->{% block header %}
