--- a/standard/templates/standard/form.html
+++ b/standard/templates/standard/form.html
@@ -1,5 +1,5 @@
 {% extends 'account/base.html' %}{% block title %}
-<title>評価基準の投稿/編集-アイディア発想支援</title> {% endblock title %}
+<title>評価基準の投稿/編集-合意形成支援</title> {% endblock title %}
 <!--ページ見出し-->
 {% block header %}
 <span id="page-title">アイディア詳細</span>
