--- a/standard/templates/standard/list.html
+++ b/standard/templates/standard/list.html
@@ -1,5 +1,5 @@
 {% extends 'account/base.html' %}{% block title %}
-<title>評価基準一覧-アイディア発想支援</title> {% endblock title %}
+<title>評価基準一覧-合意形成支援</title> {% endblock title %}
 <!--ページ見出し-->
 {% block header %}
 <p>
