--- a/account/templates/account/base.html
+++ b/account/templates/account/base.html
@@ -52,7 +52,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <div class="margin-left">
         <a class="navbar-brand" href="{% url 'account:top' %}"
-          >アイディア発想支援サイト</a
+          >合意形成支援サイト</a
         >
       </div>
       <button
