--- a/idea/templates/idea/idea_list.html
+++ b/idea/templates/idea/idea_list.html
@@ -1,5 +1,5 @@
 {% extends 'account/base.html' %} {% block title %}
-<title>アイディア一覧-アイディア発想支援</title> {% endblock title %}
+<title>アイディア一覧-合意形成支援</title> {% endblock title %}
 <!--改行防ぎ-->
 {% block header %}
 <p>
