--- a/matrix/templates/matrix/delete.html
+++ b/matrix/templates/matrix/delete.html
@@ -1,5 +1,5 @@
 {% extends 'account/base.html' %}{% block title %}<title>
-  評価マトリクス削除-アイディア発想支援
+  評価マトリクス削除-合意形成支援
 </title>
 {% endblock title %}
 <!--ヘッダー-->
