--- a/refine/templates/refine/c_delete.html
+++ b/refine/templates/refine/c_delete.html
@@ -1,5 +1,5 @@
 {% extends 'account/base.html' %}{% block title %}<title>
-  精緻化コメントの削除-アイディア発想支援
+  精緻化コメントの削除-合意形成支援
 </title>
 {% endblock title %}
 <!--ヘッダー-->
