--- a/refine/templates/refine/c_form.html
+++ b/refine/templates/refine/c_form.html
@@ -1,5 +1,5 @@
 {% extends 'account/base.html' %}{% block title %}<title>
-  精緻化コメント投稿/編集-アイディア発想支援
+  精緻化コメント投稿/編集-合意形成支援
 </title>
 {% endblock title %}
 <!--ヘッダー-->
