--- a/account/templates/account/top.html
+++ b/account/templates/account/top.html
@@ -15,10 +15,9 @@
     <span style="color: #ff0000; font-weight: bold">
     使用の流れは初めから完全に理解しようとしなくてもよいです。各ステップに進んだ際によく読んでください。(各ページにヘルプボタンがあります) 
     </span></br>
-    </br></br>
-    <span style="color: blue; font-weight: bold">(1/16 追記、同じユーザー名で複数端末ログイン、書き込み等の操作も自由に行えそうです。</span></br>
-    表内の同じ要素を同時に扱うとエラー発生等あるかもしれませんのでエラー画面が出たらブラウザバックしてください。)</br>
-    それ以外でエラーが起きる場合は人為的ミスです。報告お願いします。
+    <span style="color: blue; font-weight: bold">同じユーザー名で複数端末ログイン、書き込み等の操作も自由に行えるはずです。</span></br>
+    グループで1つのアカウントを共有することで議論内容をまとめることができます。</br>
+    ただし、表内の同じ要素を同時に扱うとエラー発生等あるかもしれませんのでエラー画面が出たらブラウザバックしてください。)</br>
   </p>
 
   <h3>合意形成支援サイト使用の流れ</h3><hr>
