--- a/account/templates/account/base.html
+++ b/account/templates/account/base.html
@@ -84,7 +84,7 @@
           {% else %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'account:my_page' user.pk %}"
-              >My page</a
+              >マイページ</a
             >
           </li>
           <li class="nav-item">
